<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.marcelo.recetasdecocina.AcercaDeActivity">

    <ImageView
        android:layout_margin="16dp"
        android:layout_width="match_parent"
        android:layout_height="128dp"
        android:src="@drawable/pizzaa"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:gravity="center"
        android:textSize="36sp"
        android:textStyle="bold"/>

    <TextView
        android:layout_margin="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fuente"
        android:gravity="center"
        android:textSize="24sp"/>

    <TextView
        android:layout_margin="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dev"
        android:gravity="center"
        android:textSize="18sp"/>

    <TextView
        android:layout_margin="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/contacto"
        android:gravity="center"
        android:textSize="16sp"/>

    <TextView
        android:layout_margin="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ciudad"
        android:gravity="center"
        android:textSize="24sp"/>

</LinearLayout>
